<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/appbar_container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">
        <Toolbar
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:background="@color/color_default"
            android:layout_width="match_parent"
            app:titleTextColor="@color/white"
            app:title="@string/title_registro_insegura"
            android:elevation="5dp"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_container_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:errorEnabled="true"
            android:hint="@string/label_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:layout_marginTop="10dp"
            android:hint="@string/label_name"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:errorEnabled="true"
            android:layout_marginTop="10dp"
            android:hint="@string/label_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:errorEnabled="true"
            android:layout_marginTop="10dp"
            android:hint="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:enabled="false"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="35dp"
        android:id="@+id/continuar"
        android:text="@string/continuar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>