<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/appbar_container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">
        <Toolbar
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:background="@color/color_default"
            android:layout_width="match_parent"
            app:titleTextColor="@color/white"
            app:title="@string/title_registro_insegura"
            android:elevation="5dp"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_container_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:layout_marginTop="10dp"
            android:hint="@string/label_password"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confPassword"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:errorEnabled="true"
            android:layout_marginTop="10dp"
            android:hint="@string/label_password_conf"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/optionsPassword"
            android:layout_marginTop="6dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/policy_min_size_check"
                    android:src="@android:drawable/checkbox_off_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/policy_min_size_label"
                    android:layout_marginStart="10dp"
                    android:text="@string/policy_min_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/policy_max_size_check"
                    android:src="@android:drawable/checkbox_off_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/policy_max_size_label"
                    android:layout_marginStart="10dp"
                    android:text="@string/policy_max_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/policy_has_uppercase_check"
                    android:src="@android:drawable/checkbox_off_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/policy_has_uppercase_label"
                    android:layout_marginStart="10dp"
                    android:text="@string/policy_has_uppercase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/policy_has_lowercase_check"
                    android:src="@android:drawable/checkbox_off_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/policy_has_lowercase_label"
                    android:layout_marginStart="10dp"
                    android:text="@string/policy_has_lowercase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/policy_has_digits_check"
                    android:src="@android:drawable/checkbox_off_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/policy_has_digits_label"
                    android:layout_marginStart="10dp"
                    android:text="@string/policy_has_digits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/policy_has_symbol_check"
                    android:src="@android:drawable/checkbox_off_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/policy_has_symbol_label"
                    android:layout_marginStart="10dp"
                    android:text="@string/policy_has_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/policy_not_space_check"
                    android:src="@android:drawable/checkbox_off_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@android:color/darker_gray"
                    android:id="@+id/policy_not_space_label"
                    android:layout_marginStart="10dp"
                    android:text="@string/policy_not_space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/policy_password_equals"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/policy_password_equals_check"
                android:src="@android:drawable/checkbox_off_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/policy_password_equals_label"
                android:layout_marginStart="10dp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/policy_password_equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:enabled="false"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="35dp"
        android:id="@+id/register"
        android:text="@string/registrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>